# glitch-amr

./: DOCKER_GUIDE.md  Dockerfile  NOTICE  README.md  docker-compose.yml  entrypoint.sh
ESP32_v2/: README.md  platformio.ini
ESP32_v2/include/: README  config.h  encoder_driver.h  imu_driver.h  motor_controller.h
ESP32_v2/src/: encoder_driver.cpp  imu_driver.cpp  main.cpp  motor_controller.cpp
glitch_bringup/: CMakeLists.txt  package.xml
glitch_bringup/launch/: bringup.launch.py  bringup_real.launch.py  bringup_sim.launch.py  robot_nodes.launch.py  rplidar_a2m8_launch.py
glitch_control/: CMakeLists.txt  package.xml
glitch_control/config/: ekf.yaml
glitch_control/launch/: control.launch.py
glitch_control/src/: control.py
glitch_description/: CMakeLists.txt  package.xml
glitch_description/description/urdf/: caster.urdf.xacro  common_properties.urdf.xacro  glitch.urdf.xacro  imu.urdf.xacro  robot.urdf.xacro  rplidar.urdf.xacro  wheel.urdf.xacro  wheel_drop.urdf.xacro  wheel_with_wheeldrop.urdf.xacro
glitch_description/launch/: robot_description.launch.py  view_model.launch.py  view_navigation.launch.py  view_robot.launch.py
glitch_navigation/: CMakeLists.txt  package.xml
glitch_navigation/config/: carto_lds_2d.lua  nav2_params.yaml
glitch_navigation/launch/: localization.launch.py  nav2.launch.py  navigation.launch.py  slam.launch.py
glitch_nodes/: CMakeLists.txt  package.xml
glitch_nodes/src/: motion_control_node.cpp
glitch_simulator/: CMakeLists.txt  package.xml
glitch_simulator/launch/: glitch_ign.launch.py  glitch_spawn.launch.py  ign.launch.py  ros_ign_bridge.launch.py
resources/: USB_SETUP.md
